css/style.css
@font-face
{
    font-family: Carrington;
    src: url(../fonts/carrington.woff);
}
*{
    font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #363636;
}
::-webkit-scrollbar {
width: 0px;
}
body{
    /*background-color: #363636;*/
    margin: 0 !important;
}
a{
    text-decoration: none;
}
.content{
    border: 1px solid;
    padding: 5px;
    width: 300px;
    margin: 15px auto;
    display: none;
    /*color: white;*/
}
.title{
    /*color: white;*/
    text-align: center;
    border-top: 1px solid;
    /*border-color: #FFFFFF;*/
    padding-bottom: 10px;
    padding-top: 10px;
    margin: 0px;
    display: block;
}
#menutoggle{
    position: absolute;
    top: 0px;
    left: 0px;
    display: block;
    background-color: #363636;
    padding: 16px;
}

#header{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 54px;
    background-color: #363636;
}
#headerTitle{
    color: white;
    margin: 10px auto;
    text-align: center;
    font-size: 30px;
    font-family: carrington;
}

#my-menu a{
    color: white;
}

